[gd_scene load_steps=21 format=3 uid="uid://b5k6jl4v0x6fj"]

[ext_resource type="Script" path="res://scripts/characters/enemy.gd" id="1_6mh4t"]
[ext_resource type="PackedScene" uid="uid://bpg4w41ymfcnd" path="res://templates/hit_particles_cpu.tscn" id="2_l1pve"]
[ext_resource type="Texture2D" uid="uid://di0w12wutrt08" path="res://assets/Robot Warfare Asset Pack 22-11-24/Robots/Spider.png" id="2_sucmj"]
[ext_resource type="PackedScene" path="res://templates/machine_gun_weapon.tscn" id="3_1ri7l"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_root.gd" id="4_4cykd"]
[ext_resource type="Script" path="res://scripts/shooting/shooting.gd" id="4_n75hf"]
[ext_resource type="PackedScene" path="res://templates/health_bar.tscn" id="5_2ngo1"]
[ext_resource type="Script" path="res://scripts/vision_cone.gd" id="6_kbaj7"]
[ext_resource type="Script" path="res://scripts/shooting/projectile_weapon.gd" id="6_rkyrv"]
[ext_resource type="PackedScene" path="res://templates/bullet_projectile.tscn" id="7_2orw3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7bfjn"]
atlas = ExtResource("2_sucmj")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn0gw"]
atlas = ExtResource("2_sucmj")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_om0l4"]
atlas = ExtResource("2_sucmj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n7br"]
atlas = ExtResource("2_sucmj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ng83"]
atlas = ExtResource("2_sucmj")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4aom"]
atlas = ExtResource("2_sucmj")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpacd"]
atlas = ExtResource("2_sucmj")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p1l2"]
atlas = ExtResource("2_sucmj")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pfg58"]
animations = [{
"frames": [SubResource("AtlasTexture_7bfjn"), SubResource("AtlasTexture_dn0gw")],
"loop": false,
"name": &"fire",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_om0l4"), SubResource("AtlasTexture_5n7br")],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_7ng83"), SubResource("AtlasTexture_d4aom"), SubResource("AtlasTexture_kpacd"), SubResource("AtlasTexture_1p1l2")],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cqmyh"]
radius = 13.0

[node name="Character" type="CharacterBody2D"]
position = Vector2(493, 322)
script = ExtResource("1_6mh4t")
speed = 25000.0
particles_template = ExtResource("2_l1pve")

[node name="VisibilityArea" type="Area2D" parent="." node_paths=PackedStringArray("write_polygon2d")]
collision_layer = 16
collision_mask = 9
monitorable = false
script = ExtResource("6_kbaj7")
write_polygon2d = NodePath("")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisibilityArea"]

[node name="VisualPolygon2D" type="Polygon2D" parent="VisibilityArea"]
color = Color(0.988235, 0.682353, 0.686275, 0.211765)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
frames = SubResource("SpriteFrames_pfg58")
animation = &"idle"
playing = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 20.0
target_desired_distance = 20.0
path_max_distance = 30.0
radius = 30.0

[node name="Shooting" type="Node2D" parent="." node_paths=PackedStringArray("selected_weapon")]
script = ExtResource("4_n75hf")
selected_weapon = NodePath("ProjectileWeapon")

[node name="MachineGunWeapon" parent="Shooting" instance=ExtResource("3_1ri7l")]
shoot_interval_msec = 200.0
shoot_randomness = 100.0
damage = 1

[node name="ProjectileWeapon" type="Node" parent="Shooting"]
script = ExtResource("6_rkyrv")
shoot_interval_msec = 100.0
shoot_randomness = 100.0
bullet_template = ExtResource("7_2orw3")
damage = 10
projectile_speed = 1000.0

[node name="BehaviourAI" type="Node" parent="."]
script = ExtResource("4_4cykd")
actor_node_path = NodePath("..")

[node name="HealthBar" parent="." instance=ExtResource("5_2ngo1")]

[node name="CharacterCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cqmyh")

[node name="TiggerVisionConeUpdate" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[connection signal="health_updated" from="." to="HealthBar" method="_on_character_health_updated"]
[connection signal="received_damage" from="." to="." method="_on_received_damage"]
[connection signal="area_entered" from="VisibilityArea" to="." method="_on_visibility_area_area_entered"]
[connection signal="area_exited" from="VisibilityArea" to="." method="_on_visibility_area_area_exited"]
[connection signal="body_entered" from="VisibilityArea" to="." method="_on_visibility_area_body_entered"]
[connection signal="body_exited" from="VisibilityArea" to="." method="_on_visibility_area_body_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_do_move"]
[connection signal="shot_fired" from="Shooting/MachineGunWeapon" to="Shooting" method="_on_machine_gun_weapon_shot_fired"]
[connection signal="timeout" from="TiggerVisionConeUpdate" to="VisibilityArea" method="_recalculate_vision" binds= [true]]
